# mate-recorder

./: Makefile  README.md  codegen.sh  feet  main.c  meson.build  meson_post_install.sh  org.group.admin.xml  screen-server.c  screen-server.h  style  tags  tt.c  tt.h
data/: mate-recorder-admin.appdata.xml.in  mate-recorder-admin.desktop.in  mate-recorder.appdata.xml.in  mate-recorder.desktop.in  meson.build  org.screen.admin.xml
data/counter/: meson.build
data/hicolor/: meson.build
data/icon/: meson.build
po/: POTFILES.in  mate-recorder-admin.pot  mate-recorder.pot  zh_CN.mo  zh_CN.po
src/: main.c  meson.build  screen-area.c  screen-area.h  screen-count.c  screen-count.h  screen-list.c  screen-list.h  screen-save.c  screen-save.h  screen-server.c  screen-server.h  screen-stop.c  screen-stop.h  screen-style.c  screen-style.h  screen-window.c  screen-window.h
