faces = [
   ['cb-1.png'],
   ['cb-2.png'],
   ['cb-3.png'],
   ['cb-4.png'],
   ['cb-5.png'],
   ['cb-6.png'],
   ['cb-7.png'],
   ['cb-8.png'],
   ['cb-9.png'],
   ['cb-10.png']
  ]
foreach face: faces
  install_data(face,
    install_dir : join_paths(get_option('prefix'), 'share', 'mate-recorder', 'counter')
  )
endforeach
